// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Profile/components/.../GapForm when "position" and "start_date" are invalid renders correctly 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Employment Type
        </label>
        <div
          className="Select is-clearable is-searchable Select--single"
        >
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="Select-multi-value-wrapper"
              id="react-select-6--value"
            >
              <div
                className="Select-placeholder"
              >
                Select...
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-6--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className="required-error"
        >
          Reason
        </label>
        <div
          className="Select has-value is-clearable is-searchable Select--single"
        >
          <input
            disabled={false}
            name="select-content"
            type="hidden"
            value=""
          />
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="Select-multi-value-wrapper"
              id="react-select-7--value"
            >
              <div
                className="Select-value"
              >
                <span
                  aria-selected="true"
                  className="Select-value-label"
                  id="react-select-7--value-item"
                  role="option"
                >
                  
                </span>
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-7--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
            <span
              aria-label="Clear value"
              className="Select-clear-zone"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              title="Clear value"
            >
              <span
                className="Select-clear"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&times;",
                  }
                }
              />
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <div
          className="form-group"
        >
          <label
            className="required-error"
          >
            Start Date
          </label>
          <div
            className="select double-select active"
            onClick={[Function]}
          >
            <span>
              April 2018
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <div
          className="form-group"
        >
          <label
            className=""
          >
            End Date
          </label>
          <div
            className="select double-select active"
            onClick={[Function]}
          >
            <span>
              March 2016
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label>
           
        </label>
        <div
          className="btn-custom-file-upload"
        >
          <label>
            <input
              accept="application/pdf, image/jpeg"
              onChange={[Function]}
              type="file"
            />
            <span>
              Upload supporting evidence (Optional)
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-12"
    >
      <div
        className="Test__container__content"
      >
        Document
      </div>
      
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Details
    </label>
    <textarea
      cols="50"
      name="position"
      onChange={[Function]}
      rows="4"
      value="Education Gap for an year"
    />
  </div>
</div>
`;

exports[`containers/Profile/components/.../GapForm when all inputs have no values renders correctly 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Employment Type
        </label>
        <div
          className="Select is-clearable is-searchable Select--single"
        >
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="Select-multi-value-wrapper"
              id="react-select-2--value"
            >
              <div
                className="Select-placeholder"
              >
                Select...
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-2--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Reason
        </label>
        <div
          className="Select has-value is-clearable is-searchable Select--single"
        >
          <input
            disabled={false}
            name="select-content"
            type="hidden"
            value=""
          />
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="Select-multi-value-wrapper"
              id="react-select-3--value"
            >
              <div
                className="Select-value"
              >
                <span
                  aria-selected="true"
                  className="Select-value-label"
                  id="react-select-3--value-item"
                  role="option"
                >
                  
                </span>
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-3--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
            <span
              aria-label="Clear value"
              className="Select-clear-zone"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              title="Clear value"
            >
              <span
                className="Select-clear"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&times;",
                  }
                }
              />
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <div
          className="form-group"
        >
          <label
            className=""
          >
            Start Date
          </label>
          <div
            className="select double-select active"
            onClick={[Function]}
          >
            <span>
              April 2018
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <div
          className="form-group"
        >
          <label
            className=""
          >
            End Date
          </label>
          <div
            className="select double-select active"
            onClick={[Function]}
          >
            <span>
              Present
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label>
           
        </label>
        <div
          className="btn-custom-file-upload"
        >
          <label>
            <input
              accept="application/pdf, image/jpeg"
              onChange={[Function]}
              type="file"
            />
            <span>
              Upload supporting evidence (Optional)
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-12"
    >
      
      
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Details
    </label>
    <textarea
      cols="50"
      name="position"
      onChange={[Function]}
      rows="4"
      value=""
    />
  </div>
</div>
`;

exports[`containers/Profile/components/.../GapForm when all inputs have values renders correctly 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Employment Type
        </label>
        <div
          className="Select has-value is-clearable is-searchable Select--single"
        >
          <input
            disabled={false}
            name="select-content"
            type="hidden"
            value="employment_gap"
          />
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="Select-multi-value-wrapper"
              id="react-select-8--value"
            >
              <div
                className="Select-value"
              >
                <span
                  aria-selected="true"
                  className="Select-value-label"
                  id="react-select-8--value-item"
                  role="option"
                >
                  Employment Gap
                </span>
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-8--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
            <span
              aria-label="Clear value"
              className="Select-clear-zone"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              title="Clear value"
            >
              <span
                className="Select-clear"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&times;",
                  }
                }
              />
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Reason
        </label>
        <div
          className="Select has-value is-clearable is-searchable Select--single"
        >
          <input
            disabled={false}
            name="select-content"
            type="hidden"
            value="Compassionate Leave"
          />
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="Select-multi-value-wrapper"
              id="react-select-9--value"
            >
              <div
                className="Select-value"
              >
                <span
                  aria-selected="true"
                  className="Select-value-label"
                  id="react-select-9--value-item"
                  role="option"
                >
                  Compassionate Leave
                </span>
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-9--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
            <span
              aria-label="Clear value"
              className="Select-clear-zone"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              title="Clear value"
            >
              <span
                className="Select-clear"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&times;",
                  }
                }
              />
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <div
          className="form-group"
        >
          <label
            className=""
          >
            Start Date
          </label>
          <div
            className="select double-select active"
            onClick={[Function]}
          >
            <span>
              March 2016
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <div
          className="form-group"
        >
          <label
            className=""
          >
            End Date
          </label>
          <div
            className="select double-select active"
            onClick={[Function]}
          >
            <span>
              June 2016
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label>
           
        </label>
        <div
          className="btn-custom-file-upload"
        >
          <label>
            <input
              accept="application/pdf, image/jpeg"
              onChange={[Function]}
              type="file"
            />
            <span>
              Upload supporting evidence (Optional)
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-12"
    >
      <div
        className="Test__container__content"
      >
        Document
      </div>
      
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Details
    </label>
    <textarea
      cols="50"
      name="position"
      onChange={[Function]}
      rows="4"
      value="Education Gap for an year"
    />
  </div>
</div>
`;

exports[`containers/Profile/components/.../GapForm when invalidDates is true renders correctly 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Employment Type
        </label>
        <div
          className="Select is-clearable is-searchable Select--single"
        >
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="Select-multi-value-wrapper"
              id="react-select-4--value"
            >
              <div
                className="Select-placeholder"
              >
                Select...
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-4--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label
          className=""
        >
          Reason
        </label>
        <div
          className="Select has-value is-clearable is-searchable Select--single"
        >
          <input
            disabled={false}
            name="select-content"
            type="hidden"
            value=""
          />
          <div
            className="Select-control"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="Select-multi-value-wrapper"
              id="react-select-5--value"
            >
              <div
                className="Select-value"
              >
                <span
                  aria-selected="true"
                  className="Select-value-label"
                  id="react-select-5--value-item"
                  role="option"
                >
                  
                </span>
              </div>
              <div
                className="Select-input"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <input
                  aria-activedescendant="react-select-5--value"
                  aria-expanded="false"
                  aria-haspopup="false"
                  aria-owns=""
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "5px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                >
                  
                </div>
              </div>
            </div>
            <span
              aria-label="Clear value"
              className="Select-clear-zone"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              title="Clear value"
            >
              <span
                className="Select-clear"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&times;",
                  }
                }
              />
            </span>
            <span
              className="Select-arrow-zone"
              onMouseDown={[Function]}
            >
              <span
                className="Select-arrow"
                onMouseDown={[Function]}
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <div
          className="form-group"
        >
          <label
            className=""
          >
            Start Date
          </label>
          <div
            className="select double-select active"
            onClick={[Function]}
          >
            <span>
              April 2018
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <div
          className="form-group"
        >
          <label
            className=""
          >
            End Date
          </label>
          <div
            className="select double-select active"
            onClick={[Function]}
          >
            <span>
              Present
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-md-6"
    >
      <div
        className="form-group"
      >
        <label>
           
        </label>
        <div
          className="btn-custom-file-upload"
        >
          <label>
            <input
              accept="application/pdf, image/jpeg"
              onChange={[Function]}
              type="file"
            />
            <span>
              Upload supporting evidence (Optional)
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-12 col-md-12"
    >
      
      
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
    >
      Details
    </label>
    <textarea
      cols="50"
      name="position"
      onChange={[Function]}
      rows="4"
      value=""
    />
  </div>
  <div
    className="required-error"
  >
    Error occured
  </div>
</div>
`;
